---
config:
    layout: elk
---
%%{init: {'theme': 'forest', 'classDiagram': {'curve': 'linear', 'padding': 20}}}%%
classDiagram

direction
    class AccountStatus {
        <<enumeration>>
        ACTIVE
        SUSPEND
        CLOSED
    }

    class RoomType {
        <<enumeration>>
        StudioRoom
        StandardRoom
        OneBedRoomRoom
    }

    class RoomStatus {
        <<enumeration>>
        Available
        Reserved
        Occupied
        Turnover_Cleaning
        Maintenance
        Disable
    }

    class ContractStatus {
        <<enumeration>>
        DRAFT
        PENDING_SIGN
        ACTIVE
        ENDING_SOON
        TERMINATED
        EXPIRED
    }

    class InvoiceStatus {
        <<enumeration>>
        ISSUED
        PAID
        OVERDUE
        DISPUTED
        VOID
    }

    class IssueCategory {
        <<enumeration>>
        PLUMBING
        ELECTRICAL
        AC
    }

    class Dorm {
        - name
        - buildings
        - residents
        - employees
        - technicians
        - cleaners

        + add_building()
        + add_resident()
        + add_employee()
        + add_technician()
        + add_cleaner()

        + search_resident_by_id()
        + search_room_by_id()
        + request_maintenance()
        + change_lease_contract()
    }

    class Resident {
        - id
        - name
        - age
        - phone_number
        - strike
        - date_create
        - room_bookings
        - facility_bookings
        - contracts
        - discounts
        - invoices
        - receipts
        - status

        + add_contract()
        + add_invoice()
        + search_contract_by_id()
    }

    class Building {
        - id
        - floor
        - rooms
        - washing_machines
        - meeting_rooms
        - lockers

        + add_room()
    }

    class Room {
        - room_id
        - building
        - floor
        - type
        - basic_amenities
        - status
        - room_log
        - maintenance_tickets
        - electric_cost
        - water_cost
        - rental

        + add_maintenance_ticket()
        + update_meter()
        + record_handover()
    }

    class Contract {
        - id
        - date_create
        - room
        - cancel_rent_condition
        - move_in_date
        - status
        - rental_time
        - monthly_rent

        + calculate_upgrade_amount()
    }

    class Invoice {
        - id
        - type
        - room_id
        - amount
        - status
    }

    class Payment {
        - id
        - amount
        - payment_date
        - invoices
        - payment_gateway
    }

    class PaymentGateway {
    }

    class BankAccount {
    }

    class Card {
    }

    class Staff {
        - id
        - name
        - phone_number
        - status
        - hire_date
        - current_task

        + update_status()
        + assign_task()
        + complete_task()
    }

    class Employee {
        - id
        - name
        - date_create
        - status

        + start_maintenance()
        + find_available_technician()
        + create_maintenance_ticket()
    }

    class Technician {
        - id
        - name
        - phone_number
        - compabilities
        - schedule
        - current_task
        - status

        + start_maintenance()
        + assign_ticket()
    }

    class Cleaner {
        - id
        - name
        - phone_number
        - cleaning_supplies_list
        - assigned_rooms
        - status

        + clean_room()
    }

    class MaintenanceTicket {
        - id
        - reporter
        - room_id
        - issue_category
        - report_time
        - responsible_technician
        - approve_employee
        - evidence_before_after
        - status

        + update_maintenance_status()
        + approve_maintenance()
    }

    Dorm o-- Resident
    Dorm o-- Building
    Dorm o-- Employee
    Dorm o-- Technician
    Dorm o-- Cleaner

    Resident o-- Contract
    Resident o-- Invoice

    Building o-- Room
    Room o-- MaintenanceTicket

    Contract --> Room
    MaintenanceTicket --> Resident
    MaintenanceTicket --> Technician

    Payment o-- Invoice
    Payment --> PaymentGateway
    PaymentGateway <|-- BankAccount
    PaymentGateway <|-- Card
